--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "name": "new-snazzah",
   "version": "1.0.0",
-  "license": "MIT",
   "scripts": {
     "build": "preact build",
+    "build:fix": "cp src/{i,m,o,argoto,steemcord-schema,telegram-stickers,keybase.txt,browserconfig.xml,snazzah-icon.svg,favicon.ico,google7504fd97e384ccf9.html} build -r",
     "build:clean": "rm -rf build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
