--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "name": "new-snazzah",
   "version": "1.0.0",
   "scripts": {
-    "build": "preact build",
-    "build:fix": "cp src/{i,m,o,argoto,steemcord-schema,telegram-stickers,keybase.txt,browserconfig.xml,favicon.ico,google7504fd97e384ccf9.html,.well-known} build -r",
-    "build:clean": "rm -rf build",
+    "build": "preact build && npm run build:fix",
+    "build:fix": "npx ncp build/assets build && npx rimraf build/assets",
+    "build:clean": "npx rimraf build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
@@ -28,7 +28,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "preact-cli": "^3.3.1",
-    "preact-purge-tailwindcss": "^2.1.3",
+    "preact-purge-tailwindcss": "tim-hub/preact-purge-tailwindcss#master",
     "prettier": "^2.4.1",
     "sirv-cli": "^1.0.14",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
