--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@iconify/react": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "clsx": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-config-preact": "^1.2.0",
     "eslint-config-prettier": "^8.3.0",
