--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@iconify-icons/mdi": "^1.1.42",
     "@iconify-icons/simple-icons": "^1.1.58",
     "@iconify/react": "^3.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "clsx": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-config-preact": "^1.3.0",
