--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@iconify-icons/simple-icons": "^1.1.58",
     "@iconify/react": "^3.1.1",
     "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/experimental-utils": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "clsx": "^1.1.1",
-    "eslint": "^7.32.0",
+    "eslint": "7.32.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
