--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@typescript-eslint/parser": "4.33.0",
     "clsx": "^1.1.1",
     "eslint": "7.32.0",
-    "eslint-config-preact": "^1.3.0",
+    "eslint-config-preact": "1.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "preact-cli": "^3.3.3",
