--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "@iconify-icons/mdi": "^1.1.42",
     "@iconify-icons/simple-icons": "^1.1.60",
     "@iconify/react": "^3.1.2",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/experimental-utils": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/experimental-utils": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "clsx": "^1.1.1",
-    "eslint": "7.32.0",
-    "eslint-config-preact": "1.3.0",
+    "eslint": "^8.7.0",
+    "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.7",
     "preact-cli": "^3.3.3",
     "preact-purge-tailwindcss": "tim-hub/preact-purge-tailwindcss#master",
     "prettier": "^2.5.1",
