--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.5",
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-snazzah": "^1.1.0",
+    "eslint-plugin-react": "^7.29.4",
     "serve": "^13.0.2",
     "typescript": "4.6.4"
   }
