--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@iconify-icons/cib": "^1.2.2",
+    "@iconify-icons/file-icons": "^1.2.1",
     "@iconify-icons/mdi": "^1.2.9",
     "@iconify-icons/simple-icons": "^1.2.10",
     "@iconify/react": "^3.2.1",
