--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "preact-compat": "^3.19.0",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
+    "react-schemaorg": "^2.0.0",
     "react-tippy": "^1.4.0",
     "react-use-lanyard": "^0.1.1",
     "sass": "^1.51.0",
+    "schema-dts": "^1.1.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
