--- a/.github/workflows/ci-dep.yml
+++ b/.github/workflows/ci-dep.yml
@@ -4,9 +4,7 @@ on: [push, pull_request]
 jobs:
   automerge:
     name: Automerge Dependabot PRs
-    if: >
-        github.event_name == 'pull_request' &&
-        github.event.pull_request.user.login == 'dependabot[bot]'
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
