--- a/.github/workflows/ci-dep.yml
+++ b/.github/workflows/ci-dep.yml
@@ -9,7 +9,8 @@ jobs:
     permissions:
       pull-requests: write
     steps:
-      - uses: fastify/github-action-merge-dependabot@v2.5.0
+      - uses: actions/checkout@v2
+      - uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           target: minor
+          github-token: ${{ secrets.GITHUB_TOKEN }}
