--- a/.github/workflows/ci-dep.yml
+++ b/.github/workflows/ci-dep.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
+      contents: write
     steps:
       - uses: fastify/github-action-merge-dependabot@v3.0.0
         with:
