--- a/.github/workflows/ci-dep.yml
+++ b/.github/workflows/ci-dep.yml
@@ -10,6 +10,13 @@ jobs:
       pull-requests: write
       contents: write
     steps:
+      - name: Wait for checks to succeed
+        uses: lewagon/wait-on-check-action@v1.1.2
+        with:
+          ref: ${{ github.ref }}
+          running-workflow-name: 'Automerge Dependabot PRs'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
       - uses: fastify/github-action-merge-dependabot@v3.0.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
