--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:build": "next build && next export -o build && serve build",
     "build": "next build && next export -o build",
     "start": "next dev",
     "serve": "serve build",
@@ -18,7 +19,7 @@
     "@iconify/react": "^3.2.2",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.1",
-    "next": "12.2.0",
+    "next": "12.1",
     "next-pwa": "^5.5.4",
     "postcss": "^8.4.14",
     "preact": "^10.9.0",
