--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@iconify/react": "^3.2.2",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.1",
+    "cssnano": "^5.1.12",
     "next": "12.1",
     "next-pwa": "^5.5.4",
     "postcss": "^8.4.14",
