--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "autoprefixer": "10.4.8",
     "clsx": "1.2.1",
     "cssnano": "5.1.12",
-    "next": "12.1",
+    "next": "12.2.5",
+    "next-plugin-preact": "3.0.7",
     "next-pwa": "5.5.5",
     "postcss": "8.4.14",
-    "preact": "10.10.0",
-    "preact-compat": "3.19.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "preact": "10.10.2",
+    "preact-render-to-string": "5.2.1",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
     "react-schemaorg": "2.0.0",
+    "react-ssr-prepass": "npm:preact-ssr-prepass",
     "react-tippy": "1.4.0",
     "react-use-lanyard": "0.1.2",
     "sass": "1.54.1",
