--- a/package.json
+++ b/package.json
@@ -1,51 +1,45 @@
 {
   "name": "snazzah.com",
-  "version": "2.0.0",
+  "type": "module",
+  "version": "6.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:build": "next build && next export -o build && serve build",
-    "build": "next build && next export -o build",
-    "start": "next dev",
-    "serve": "serve build",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "@astrojs/preact": "1.2.0",
+    "@astrojs/tailwind": "2.1.2",
     "@iconify-icons/cib": "1.2.3",
-    "@iconify-icons/file-icons": "1.2.2",
     "@iconify-icons/mdi": "1.2.32",
-    "@iconify-icons/simple-icons": "1.2.33",
+    "@iconify-icons/simple-icons": "1.2.34",
     "@iconify/react": "4.0.0",
-    "autoprefixer": "10.4.13",
+    "@preact/compat": "17.1.2",
+    "astro": "1.6.0",
+    "astro-compress": "1.0.12",
+    "astro-icon": "0.8.0",
     "clsx": "1.2.1",
-    "cssnano": "5.1.14",
-    "next": "12.2.5",
-    "next-plugin-preact": "3.0.7",
-    "next-pwa": "5.5.5",
-    "postcss": "8.4.18",
-    "preact": "10.11.2",
-    "preact-render-to-string": "5.2.6",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
+    "preact": "10.6.5",
     "react-schemaorg": "2.0.0",
-    "react-ssr-prepass": "npm:preact-ssr-prepass",
     "react-tippy": "1.4.0",
     "react-use-lanyard": "0.1.4",
-    "sass": "1.55.0",
-    "schema-dts": "1.1.0",
-    "tailwindcss": "3.2.1"
+    "tailwindcss": "3.0.24"
+  },
+  "overrides": {
+    "react": "npm:@preact/compat@latest",
+    "react-dom": "npm:@preact/compat@latest"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "12.3.2",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
-    "eslint": "8.26.0",
-    "eslint-config-next": "12.3.2",
-    "eslint-config-snazzah": "1.2.1",
-    "eslint-plugin-react": "7.31.10",
-    "serve": "14.0.1",
-    "typescript": "4.8.4"
+    "eslint": "^8.27.0",
+    "eslint-config-snazzah": "^1.2.1",
+    "eslint-plugin-astro": "^0.21.0",
+    "sass": "^1.56.0",
+    "schema-dts": "^1.1.0",
+    "vite-plugin-pwa": "^0.13.2"
   }
 }
