--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@iconify-icons/simple-icons": "1.2.39",
     "@iconify/react": "4.0.1",
     "@preact/compat": "17.1.2",
-    "astro": "1.6.15",
-    "astro-compress": "1.1.22",
+    "astro": "1.7.1",
+    "astro-compress": "1.1.23",
     "astro-icon": "0.8.0",
     "clsx": "1.2.1",
     "preact": "10.11.3",
     "react-schemaorg": "2.0.0",
     "react-tippy": "1.4.0",
-    "react-use-lanyard": "0.1.4",
+    "react-use-lanyard": "0.2.0",
     "tailwindcss": "3.2.4"
   },
   "overrides": {
@@ -35,11 +35,11 @@
     "react-dom": "npm:@preact/compat@latest"
   },
   "devDependencies": {
-    "eslint": "^8.27.0",
-    "eslint-config-snazzah": "^1.2.1",
-    "eslint-plugin-astro": "^0.21.0",
-    "sass": "^1.56.0",
-    "schema-dts": "^1.1.0",
-    "vite-plugin-pwa": "^0.13.2"
+    "eslint": "8.30.0",
+    "eslint-config-snazzah": "1.2.1",
+    "eslint-plugin-astro": "0.21.1",
+    "sass": "1.57.0",
+    "schema-dts": "1.1.0",
+    "vite-plugin-pwa": "0.14.0"
   }
 }
