--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@iconify/react": "4.0.1",
     "@preact/compat": "17.1.2",
     "astro": "1.9.2",
-    "astro-compress": "1.1.23",
+    "astro-compress": "1.1.33",
     "astro-icon": "0.8.0",
     "clsx": "1.2.1",
     "preact": "10.11.3",
     "react-schemaorg": "2.0.0",
     "react-tippy": "1.4.0",
     "react-use-lanyard": "0.2.0",
+    "svgo": "^2.8.0",
     "tailwindcss": "3.2.4"
   },
   "overrides": {
