--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@iconify-icons/simple-icons": "1.2.48",
     "@iconify/react": "4.1.0",
     "@preact/compat": "17.1.2",
-    "astro": "2.1.9",
+    "astro": "2.2.2",
     "astro-compress": "1.1.35",
     "astro-icon": "0.8.0",
     "clsx": "1.2.1",
@@ -29,7 +29,7 @@
     "react-tippy": "1.4.0",
     "react-use-lanyard": "0.3.0",
     "svgo": "2.8.0",
-    "tailwindcss": "3.2.7"
+    "tailwindcss": "3.3.1"
   },
   "overrides": {
     "react": "npm:@preact/compat@latest",
@@ -39,8 +39,9 @@
     "eslint": "8.38.0",
     "eslint-config-snazzah": "1.2.1",
     "eslint-plugin-astro": "0.26.1",
-    "sass": "1.60.0",
+    "sass": "1.62.0",
     "schema-dts": "1.1.2",
+    "typescript": "5.0.4",
     "vite-plugin-pwa": "0.14.7"
   }
 }
