--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@iconify-icons/simple-icons": "1.2.74",
     "@iconify/react": "4.1.1",
     "@preact/compat": "17.1.2",
-    "astro": "4.1.3",
+    "astro": "4.2.3",
     "astro-compress": "2.2.8",
     "astro-icon": "1.0.2",
     "clsx": "2.1.0",
@@ -28,7 +28,7 @@
     "react-schemaorg": "2.0.0",
     "react-tippy": "1.4.0",
     "react-use-lanyard": "0.3.1",
-    "svgo": "2.8.0",
+    "svgo": "3.2.0",
     "tailwindcss": "3.4.1"
   },
   "overrides": {
@@ -37,9 +37,11 @@
   },
   "devDependencies": {
     "eslint": "8.56.0",
-    "eslint-config-snazzah": "1.2.1",
+    "eslint-config-snazzah": "2.0.0",
     "eslint-plugin-astro": "0.31.3",
-    "sass": "1.69.7",
+    "prettier": "3.2.4",
+    "prettier-plugin-astro": "0.13.0",
+    "sass": "1.70.0",
     "schema-dts": "1.1.2",
     "typescript": "5.3.3",
     "vite-plugin-pwa": "0.17.4"
